# Kalman

./: .gitignore  ReadMe.md
scripts/: compile.sh  run_examples.sh
src/: kalman.h  main.c
test/: CMakeLists.txt  kalman_test.h  linalg_test.h  main_test.c
